crates/fai-tests/tests/fixtures/errors/SignatureMismatch.fai
module SignatureMismatch

// The body returns an Int, but the signature claims Bool.
//~ ERROR FAI3004
public f : Int -> Bool
let f x = x + 1
